--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,8 @@
 [metadata]
 name = bibi_calibre
-version = '1.2.0'
-license = attr:bibi_calibre.__license__
+version = attr: bibi_calibre.__version__
 license_file = LICENSE
 
 [options]
-zip_safe = True
 include_package_data = True
 packages = find:
